JavaScript functionality WIP

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
         <div class="calc">
             <div class="calc__display" id="display"></div>
             <div class="calc__actions">
-                <button class="clear" data-action="clear">C</button>
-                <button class="backspace" data-action="backspace">CE</button>
+                <button class="btn action" data-action="clear">C</button>
+                <button class="btn action" data-action="backspace">CE</button>
 
-                <button class="multiply" data-action="multiply">*</button>
-                <button class="one" data-action="1">1</button>
-                <button class="two" data-action="2">2</button>
-                <button class="divide" data-action="divide">/</button>
-                <button class="three" data-action="3">3</button>
-                <button class="four" data-action="4">4</button>
-                <button class="add" data-action="add">+</button>
-                <button class="five" data-action="5">5</button>
-                <button class="six" data-action="6">6</button>
-                <button class="subtract" data-action="subtract">-</button>
-                <button class="seven" data-action="7">7</button>
-                <button class="eight" data-action="8">8</button>
-                <button class="nine" data-action="9">9</button>
-                <button class="equals" data-action="calculate">=</button>
-                <button class="zero" data-action="0">0</button>
+                <button class="btn operator" data-action="multiply">*</button>
+                <button class="btn number" data-action="1">1</button>
+                <button class="btn number" data-action="2">2</button>
+                <button class="btn operator" data-action="divide">/</button>
+                <button class="btn number" data-action="3">3</button>
+                <button class="btn number" data-action="4">4</button>
+                <button class="btn operator" data-action="add">+</button>
+                <button class="btn number" data-action="5">5</button>
+                <button class="btn number" data-action="6">6</button>
+                <button class="btn operator" data-action="subtract">-</button>
+                <button class="btn number" data-action="7">7</button>
+                <button class="btn number" data-action="8">8</button>
+                <button class="btn number" data-action="9">9</button>
+                <button class="btn number" data-action="0">0</button>
+                <button class="btn action" data-action="calculate">=</button>
             </div>
 
         </div>
