--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                 <button class="btn action" data-action="clear">C</button>
                 <button class="btn action" data-action="backspace">CE</button>
 
-                <button class="btn operator" data-action="multiply">*</button>
+                <button class="btn operator" data-action="*">*</button>
                 <button class="btn number" data-action="1">1</button>
                 <button class="btn number" data-action="2">2</button>
-                <button class="btn operator" data-action="divide">/</button>
+                <button class="btn operator" data-action="/">/</button>
                 <button class="btn number" data-action="3">3</button>
                 <button class="btn number" data-action="4">4</button>
-                <button class="btn operator" data-action="add">+</button>
+                <button class="btn operator" data-action="+">+</button>
                 <button class="btn number" data-action="5">5</button>
                 <button class="btn number" data-action="6">6</button>
-                <button class="btn operator" data-action="subtract">-</button>
+                <button class="btn operator" data-action="-">-</button>
                 <button class="btn number" data-action="7">7</button>
                 <button class="btn number" data-action="8">8</button>
                 <button class="btn number" data-action="9">9</button>
